[package]
name = "clinbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
clipboard = "0.5.0"
reqwest = { version = "0.11.22", features = ["cookies"] }
reqwest_cookie_store = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio =  { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
